ADD range-limitations to datepicker

--- a/demo/components/date-picker/date-picker.component.html
+++ b/demo/components/date-picker/date-picker.component.html
@@ -3,7 +3,9 @@ date picker
 
 
 <div style="width: 250px;border-style: solid; margin: 20px;">
-  <vcl-date-picker></vcl-date-picker>
+  <vcl-date-picker [selectedTime]="selectedTime" [selectedRangeEnd]="selectedRangeEnd"
+[selectRange]="selectRange" [maxRangeLength]="3" [minDate]="minDate"
+  ></vcl-date-picker>
 </div>
 
 
