--- a/src/components/date-picker/date-picker.component.html
+++ b/src/components/date-picker/date-picker.component.html
@@ -37,9 +37,9 @@
         {{week[5].getWeekNumber()}}
       </div>
       <div *ngFor="let day of week" class="vclDGCell timeFragment vclCalItem"
-       [class.vclDisabled]="!viewDate.isSameMonthAndYear(day)"
+       [class.vclDisabled]="isDisabled(day)"
        [class.vclSelected]="isMarked(day)"
-       (click)="viewDate.isSameMonthAndYear(day) && select(day)"
+       (click)="!isDisabled(day) && select(day)"
        [class.vclToday]="highlightSelected && day.isToday()"
        [class.vclOtherMonth]="!day.isSameMonthAndYear()">
         {{day.date.getDate()}}
