--- a/src/components/date-picker/date-picker.component.html
+++ b/src/components/date-picker/date-picker.component.html
@@ -10,7 +10,7 @@
               </div>
             </button>
           <span class="vclCalHeaderLabel">
-              {{viewDate.getMonthString()}}&nbsp;&nbsp;{{viewDate.getYearString()}}
+              {{viewDate.getMonthString() | loc}}&nbsp;&nbsp;{{viewDate.getYearString()}}
             </span>
           <button class="vclTransparent vclSquare vclButton" (click)="nextMonth()">
                <div class="vclIcogram">
@@ -25,10 +25,10 @@
 
     <div class="vclDGRow">
       <div *ngIf="displayWeekNumbers" class="vclDGCell timeFragment vclCalItem vclOtherMonth">
-        week
+        {{'week' | loc}}
       </div>
-      <div *ngFor="let day of viewDate.getWeekDays()" class="vclDGCell vclWeekdayLabel">
-        {{day}}
+      <div *ngFor="let day of viewDate.getWeekDays()" class="vclDGCell vclWeekdayLabel" [class.hidden]="!displayWeekdays">
+        {{day | loc}}
       </div>
     </div>
 
@@ -36,12 +36,7 @@
       <div *ngIf="displayWeekNumbers && week.length==7" class="vclDGCell">
         {{week[5].getWeekNumber()}}
       </div>
-      <div *ngFor="let day of week" class="vclDGCell timeFragment vclCalItem"
-       [class.vclDisabled]="isDisabled(day)"
-       [class.vclSelected]="isMarked(day)"
-       (click)="!isDisabled(day) && select(day)"
-       [class.vclToday]="highlightSelected && day.isToday()"
-       [class.vclOtherMonth]="!day.isSameMonthAndYear()">
+      <div *ngFor="let day of week" class="vclDGCell timeFragment vclCalItem" [class.vclDisabled]="isDisabled(day)" [class.vclSelected]="isMarked(day)" (click)="!isDisabled(day) && select(day)" [class.vclToday]="highlightSelected && day.isToday()" [class.vclOtherMonth]="!day.isSameMonthAndYear()">
         {{day.date.getDate()}}
       </div>
     </div>
@@ -54,7 +49,7 @@
                <span class="vclText ">go to today</span>
              </div>
            </button>
-           <button title="go to selected" class="vclTransparent vclLayoutFlex vclButton" *ngIf="displayJumpSelected" (click)="gotoSelected()">
+          <button title="go to selected" class="vclTransparent vclLayoutFlex vclButton" *ngIf="displayJumpSelected" (click)="gotoSelected()">
               <div class=" vclIcogram">
                 <span class="vclText ">go to selected</span>
               </div>
