ADD format date-picker

--- a/demo/components/date-picker/date-picker.component.html
+++ b/demo/components/date-picker/date-picker.component.html
@@ -6,7 +6,7 @@
 
 <h2>Ranged Datepicker</h2>
 <div style="width: 250px;border-style: solid; margin: 20px;">
-  <vcl-date-picker [selectedTime]="selectedTime" [selectedRangeEnd]="selectedRangeEnd"
+  <vcl-date-picker [selectedDate]="selectedDate" [selectedRangeEnd]="selectedRangeEnd"
 [selectRange]="selectRange" [maxRangeLength]="7" [minDate]="minDate"
   ></vcl-date-picker>
 </div>
