ADD possibility to use custom-classes

--- a/demo/components/navigation/navigation.component.html
+++ b/demo/components/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 Horizontal navigation
-<vcl-navigation>
+<vcl-navigation class="mycustomclass1">
   <vcl-navitem [active]=true prepIcon="fa:home" label="Home1"></vcl-navitem>
-  <vcl-navitem [active]=true label="Products" prepIcon="fa:bicycle"></vcl-navitem>
+  <vcl-navitem [active]=true label="Products" prepIcon="fa:bicycle" class="underline mycustomclass2"></vcl-navitem>
   <vcl-navitem [active]=true [selected]="true" label="Pre-selected Item"></vcl-navitem>
   <vcl-navitem [active]=true href="https://example.com/" label="External link"></vcl-navitem>
 </vcl-navigation>
