--- a/demo/components/form/form.component.html
+++ b/demo/components/form/form.component.html
@@ -22,6 +22,10 @@
   <br/><br/> FlipSwitch: <br/>
   <vcl-flip-switch onLabel="An" offLabel="Aus" ngModel name="flip"></vcl-flip-switch>
 
+  <br/><br/> DatePicker: <br/>
+  <div style="width: 251px;border-style: solid;">
+    <vcl-date-picker ngModel name="datepick"></vcl-date-picker>
+  </div>
 
 
 
@@ -67,6 +71,12 @@
 
   <br/><br/> FlipSwitch: <br/>
   <vcl-flip-switch onLabel="An" offLabel="Aus" formControlName="flip"></vcl-flip-switch>
+
+
+  <br/><br/> DatePicker: <br/>
+  <div style="width: 251px;border-style: solid;">
+    <vcl-date-picker formControlName="datepick"></vcl-date-picker>
+  </div>
 
 </form>
 
