--- a/demo/components/json-editor/json-editor.component.html
+++ b/demo/components/json-editor/json-editor.component.html
@@ -1,8 +1,7 @@
-Selected Item: <span *ngIf="selectedItem">{{selectedItem.label}}</span>
+JSON-Editor:
 
-<br>
-<br>
-<br>
-<button vcl-button (click)="expand()">Show/hide</button>
+<br/>
+<br/>
+<br/>
 
-<vcl-dropdown (select)="onSelect($event)" [(expanded)]="expanded" [items]="items" [maxSelectableItems]="1" [tabindex]="77" [expanded]="true"></vcl-dropdown>
+<vcl-json-editor></vcl-json-editor>
