--- a/demo/components/json-editor/json-editor.component.html
+++ b/demo/components/json-editor/json-editor.component.html
@@ -1,7 +1,10 @@
 JSON-Editor:
 
+<!-- TODO import this from npm_modules -->
+<link rel='stylesheet' href="https://cdnjs.cloudflare.com/ajax/libs/jsoneditor/5.5.10/jsoneditor.css" />
+
 <br/>
 <br/>
 <br/>
 
-<vcl-json-editor></vcl-json-editor>
+<vcl-json-editor [value]="myObject" class="myclass1 myclass2"></vcl-json-editor>
