--- a/demo/styles/demo.styl
+++ b/demo/styles/demo.styl
@@ -113,3 +113,11 @@ code.hljs
   .vclCalendar.vclCalInput .vclCalItem.vclUnavailable:hover
     background-color: transparent
 // Month Picker
+
+
+
+
+// json-editor
+.jsoneditor-frame input
+  min-height: 0.5em !important;
+// json-editor
