--- a/src/components/dropdown/dropdown.component.html
+++ b/src/components/dropdown/dropdown.component.html
@@ -11,7 +11,8 @@
         [attr.aria-selected]="meta.selected"
         role="menuitem"
         tabindex="0"
-        (tap)="_selectItem(item, meta, metalist)">
+        (tap)="_selectItem(item, meta, metalist)"
+        [ngClass]="item.class">
         <div class="vclDropdownItemLabel">
           {{item.label}}
         </div>
