ADD(label) required

--- a/demo/components/label/label.component.html
+++ b/demo/components/label/label.component.html
@@ -8,6 +8,12 @@
   <button>button</button>
 </vcl-label>
 
+<br/>
+<br/>
+<vcl-label label="I'm required" subLabel="" class="myclass1 myclass2" [required]="true">
+  <input value="foobar" />
+</vcl-label>
+
 
 <br/>
 <h4>typed labels:</h4>
