--- a/src/components/label/label.component.html
+++ b/src/components/label/label.component.html
@@ -1,5 +1,8 @@
-<ng-content></ng-content>
 {{ label | loc }}
+
+<span *ngIf="required">{{requiredIndicatorCharacter}}</span>
+<ng-content></ng-content>
+
 <label class="vclFormControlSubLabel">
     {{ subLabel | loc }}
 </label>
