ADD(token) token-list and token-input

--- a/demo/components/form/form.component.html
+++ b/demo/components/form/form.component.html
@@ -73,6 +73,10 @@
   <vcl-flip-switch onLabel="An" offLabel="Aus" formControlName="flip"></vcl-flip-switch>
 
 
+  <br/><br/> Tokenlist: <br/>
+  <vcl-token-list formControlName="tokenlist" [tokens]="tokenList"></vcl-token-list>
+
+
   <br/><br/> DatePicker: <br/>
   <div style="width: 251px;border-style: solid;">
     <vcl-date-picker formControlName="datepick"></vcl-date-picker>
