--- a/demo/components/token/token.component.html
+++ b/demo/components/token/token.component.html
@@ -12,5 +12,8 @@ single tokens:
 
 tokenlist:<br/>
 
-
 <vcl-token-list [tokens]="tokenList" (onChange)="changed($event);"></vcl-token-list>
+
+
+
+<vcl-token-input [tokens]="tokenList" (onChange)="changed($event);"></vcl-token-input>
