ADD tokeninput to example-form

--- a/demo/components/form/form.component.html
+++ b/demo/components/form/form.component.html
@@ -76,6 +76,9 @@
   <br/><br/> Tokenlist: <br/>
   <vcl-token-list formControlName="tokenlist" [tokens]="tokenList"></vcl-token-list>
 
+  <br/><br/> TokenInput: <br/>
+  <vcl-token-input formControlName="tokeninput" [tokens]="tokenList2"></vcl-token-input>
+
 
   <br/><br/> DatePicker: <br/>
   <div style="width: 251px;border-style: solid;">
