ADD(token) README

--- a/demo/components/token/token.component.html
+++ b/demo/components/token/token.component.html
@@ -15,5 +15,5 @@ tokenlist:<br/>
 <vcl-token-list [tokens]="tokenList" (onChange)="changed($event);"></vcl-token-list>
 
 
-
+tokeninput: <br/>
 <vcl-token-input [tokens]="tokenList" (onChange)="changed($event);"></vcl-token-input>
