--- a/demo/components/token/token.component.html
+++ b/demo/components/token/token.component.html
@@ -17,4 +17,4 @@ tokenlist:<br/>
 <br/><br/>
 
 tokeninput: <br/>
-<vcl-token-input [tokens]="tokenList" (onChange)="changed($event);"></vcl-token-input>
+<vcl-token-input [tokens]="tokenList2" (onChange)="changed($event);"></vcl-token-input>
