FIX(token-input) bug with default-value

--- a/demo/components/form/form.component.html
+++ b/demo/components/form/form.component.html
@@ -77,7 +77,7 @@
   <vcl-token-list formControlName="tokenlist" [tokens]="tokenList"></vcl-token-list>
 
   <br/><br/> TokenInput: <br/>
-  <vcl-token-input formControlName="tokeninput" [tokens]="tokenList2"></vcl-token-input>
+  <vcl-token-input formControlName="tokeninput"></vcl-token-input>
 
 
   <br/><br/> DatePicker: <br/>
