ADD(slider) scalePoint-labels

--- a/demo/components/slider/slider.component.html
+++ b/demo/components/slider/slider.component.html
@@ -1,1 +1,8 @@
-<vcl-slider [min]="0" [max]="100" [step]="10" [round]="0" [value]="30"></vcl-slider>
+<vcl-slider [min]="0" [max]="120" [step]="20" [round]="0"
+ [value]="30" [scaleNames]="customScaleNames"></vcl-slider>
+
+
+<br/><br/><br/><br/>
+
+<vcl-slider [min]="0" [max]="120" [step]="20" [round]="0"
+ [value]="30" [scaleNames]="customScaleNames2"></vcl-slider>
