--- a/docs/styles/app.css
+++ b/docs/styles/app.css
@@ -3141,7 +3141,7 @@ input[type="checkbox"] {
   width: auto;
 }
 
-div.vclInput {
+.vclInput {
   overflow: hidden;
   word-wrap: normal;
   -moz-user-modify: read-write;
