--- a/demo/components/slider/slider.component.html
+++ b/demo/components/slider/slider.component.html
@@ -1,6 +1,8 @@
-<vcl-slider [min]="0" [max]="120" [step]="20" [round]="0" [value]="30" [scaleNames]="customScaleNames"></vcl-slider>
+<vcl-slider [min]="0" [max]="120" [step]="20" [round]="0"
+[value]="30" [scaleNames]="customScaleNames"></vcl-slider>
 
 
 <br/><br/><br/><br/> steps only: <br/>
-<vcl-slider [min]="0" [max]="120" [step]="20" [round]="0" [value]="30" [scaleNames]="customScaleNames2" [stepsOnly]="true">
+<vcl-slider [min]="0" [max]="120" [step]="20" [round]="0"
+[value]="30" [scaleNames]="customScaleNames2" [stepsOnly]="true">
 </vcl-slider>
