--- a/demo/components/button/button.component.html
+++ b/demo/components/button/button.component.html
@@ -1,18 +1,18 @@
-<button vcl-button (click)="someAction($event)" label="Action"></button>
+<button vcl-button (tap)="someAction($event)" label="Action"></button>
 <br><br>
-<button vcl-button (click)="someAction($event)" label="Action with appended icon" appIcon="fa:bolt"></button>
+<button vcl-button (tap)="someAction($event)" label="Action with appended icon" appIcon="fa:bolt"></button>
 <br><br>
-<button vcl-button (click)="someAction($event)" label="Action with prepended icon" prepIcon="fa:bolt"></button>
+<button vcl-button (tap)="someAction($event)" label="Action with prepended icon" prepIcon="fa:bolt"></button>
 <br><br>
-<button vcl-button (click)="someAction($event)" class="vclSquare" appIcon="fa:bolt"></button>
+<button vcl-button (tap)="someAction($event)" class="vclSquare" appIcon="fa:bolt"></button>
 <br><br>
-<button vcl-button (click)="someAction($event)" class="vclEmphasized" label="Emphasized button"></button>
+<button vcl-button (tap)="someAction($event)" class="vclEmphasized" label="Emphasized button"></button>
 <br><br>
-<button vcl-button (click)="someAction($event)" flexLabel=true label="Flexed Label"></button>
+<button vcl-button (tap)="someAction($event)" flexLabel=true label="Flexed Label"></button>
 <br><br>
-<button vcl-button (click)="someAction($event)" label="Action" busy=true busyLabel='Busy label...'></button>
+<button vcl-button (tap)="someAction($event)" label="Action" busy=true busyLabel='Busy label...'></button>
 <br><br>
-<button vcl-button (click)="someAction($event)" label="Action with appended busy icon" appIcon="fa:bolt" busy=true appIconBusy="fa:spinner fa-pulse"></button>
+<button vcl-button (tap)="someAction($event)" label="Action with appended busy icon" appIcon="fa:bolt" busy=true appIconBusy="fa:spinner fa-pulse"></button>
 <br><br>
-<button vcl-button (click)="someAction($event)" label="Action with prepended busy icon" prepIcon="fa:bolt" busy=true prepIconBusy="fa:refresh fa-spin"></button>
+<button vcl-button (tap)="someAction($event)" label="Action with prepended busy icon" prepIcon="fa:bolt" busy=true prepIconBusy="fa:refresh fa-spin"></button>
 <br><br>
