--- a/demo/components/checkbox/checkbox.component.html
+++ b/demo/components/checkbox/checkbox.component.html
@@ -5,7 +5,7 @@ Checkbox:
 <b>Checked:</b> {{isChecked}}
 
 <br><br>
-<button vcl-button (click)="isChecked=false">Uncheck checkbox</button>
+<button vcl-button (tap)="isChecked=false">Uncheck checkbox</button>
 
 <br><br>
 Disabled:
