--- a/demo/components/link/link.component.html
+++ b/demo/components/link/link.component.html
@@ -1,7 +1,7 @@
 Link with action:
 <br>
 <a vcl-link
-  (click)="someAction($event)"
+  (tap)="someAction($event)"
   [label]="'Trigger test action'"></a>
 <br><br>
 
@@ -19,7 +19,7 @@ Label and prepended icon:
   [prepIcon]="'fa:chevron-right'"></a>
 <br><br>
 
-<!-- 
+<!--
 Block usage:
 <br>
 <a vcl-link [href]="'#'">
