--- a/demo/components/radio-button/radio-button.component.html
+++ b/demo/components/radio-button/radio-button.component.html
@@ -5,7 +5,7 @@ Checkable:
 <b>Checked:</b> {{isChecked}}
 
 <br><br>
-<button vcl-button (click)="isChecked=false">Uncheck radio button</button>
+<button vcl-button (tap)="isChecked=false">Uncheck radio button</button>
 
 <br><br>
 Disabled:
