--- a/demo/components/layer/layer.component.html
+++ b/demo/components/layer/layer.component.html
@@ -1,8 +1,8 @@
 <vcl-layer-base></vcl-layer-base>
 
-<button vcl-button (click)="layerNonModal.open()" label="open non-modal layer per reference"></button>
-<button vcl-button (click)="layer1.open()" label="open modal layer"></button>
-<button vcl-button (click)="openLayerWithData()" label="open layer programmatically"></button>
+<button vcl-button (tap)="layerNonModal.open()" label="open non-modal layer per reference"></button>
+<button vcl-button (tap)="layer1.open()" label="open modal layer"></button>
+<button vcl-button (tap)="openLayerWithData()" label="open layer programmatically"></button>
 
 <template vcl-layer #layerNonModal="layer" [modal]="false" [name]="'nonModal'">
   <div class="vclPanel vclNoMargin">
@@ -12,7 +12,7 @@
     <div class="vclPanelBody">
       <p class="vclPanelContent">
         Non-modal layer text goes here<br><br>
-        <button vcl-button (click)="layerNonModal.close()" label="close Layer"></button>
+        <button vcl-button (tap)="layerNonModal.close()" label="close Layer"></button>
       </p>
     </div>
   </div>
@@ -26,8 +26,8 @@
     <div class="vclPanelBody">
       <p class="vclPanelContent">
         Modal layer 1 text goes here<br><br>
-        <button vcl-button (click)="layer2.open()" label="open Layer2"></button>
-        <button vcl-button (click)="layer1.close()" label="close Layer"></button>
+        <button vcl-button (tap)="layer2.open()" label="open Layer2"></button>
+        <button vcl-button (tap)="layer1.close()" label="close Layer"></button>
       </p>
     </div>
   </div>
@@ -41,7 +41,7 @@
     <div class="vclPanelBody">
       <p class="vclPanelContent">
         non-modal layer 2 text goes here<br><br>
-        <button vcl-button (click)="layer2.close()" label="close Layer"></button>
+        <button vcl-button (tap)="layer2.close()" label="close Layer"></button>
       </p>
     </div>
   </div>
@@ -55,8 +55,8 @@
     <div class="vclPanelBody">
       <p class="vclPanelContent">
         Send data by pressing the buttons<br><br>
-        <button vcl-button (click)="layerWithData.send('send')" label="Send data"></button>
-        <button vcl-button (click)="layerWithData.close('close')" label="close Layer"></button>
+        <button vcl-button (tap)="layerWithData.send('send')" label="Send data"></button>
+        <button vcl-button (tap)="layerWithData.close('close')" label="close Layer"></button>
       </p>
     </div>
   </div>
