FIX(slider) wrong scale

--- a/demo/components/slider/slider.component.html
+++ b/demo/components/slider/slider.component.html
@@ -1,8 +1,15 @@
-<vcl-slider [min]="0" [max]="120" [step]="20" [round]="0"
+basic: <br/>
+<vcl-slider [min]="0" [max]="100" [step]="20" [round]="0"
 [value]="30" [scaleNames]="customScaleNames"></vcl-slider>
 
 
 <br/><br/><br/><br/> steps only: <br/>
-<vcl-slider [min]="0" [max]="120" [step]="20" [round]="0"
+<vcl-slider [min]="0" [max]="100" [step]="20" [round]="0"
 [value]="30" [scaleNames]="customScaleNames2" [stepsOnly]="true">
+</vcl-slider>
+
+
+
+<br/><br/><br/><br/> default only: <br/>
+<vcl-slider [value]="30">
 </vcl-slider>
