Revert "json-editor: inline svg and css"
This reverts commit e5f2bad4ded1cf478ae1052ae373e3c228f436c8.

--- a/demo/components/json-editor/json-editor.component.html
+++ b/demo/components/json-editor/json-editor.component.html
@@ -1,5 +1,8 @@
 JSON-Editor:
 
+<!-- TODO import this from npm_modules -->
+<link rel='stylesheet' href="https://cdnjs.cloudflare.com/ajax/libs/jsoneditor/5.5.10/jsoneditor.css" />
+
 <br/>
 <br/>
 <br/>
