--- a/demo/components/jss-form/jss-form.component.html
+++ b/demo/components/jss-form/jss-form.component.html
@@ -1,1 +1,2 @@
-<vcl-jss-form [schema]="mySchema" [(value)]="value"></vcl-jss-form>
+<vcl-jss-form [schema]="mySchema" [(value)]="value" (error)="onError($event)">
+</vcl-jss-form>
