--- a/demo/components/checkbox/checkbox.component.html
+++ b/demo/components/checkbox/checkbox.component.html
@@ -15,7 +15,11 @@ Disabled:
 <br>
 Checkbox with label:
 <br>
-<vcl-checkbox [(checked)]="isChecked2" labelPosition="right">rightLabel</vcl-checkbox>
+<vcl-checkbox [(checked)]="isChecked2" labelPosition="right">
+  <label vcl-form-control-label label="rightLabel" subLabel="SubRightLabel"></label>
+</vcl-checkbox>
 <br>
 <br>
-<vcl-checkbox [(checked)]="isChecked2" labelPosition="left">leftLabel</vcl-checkbox>
+<vcl-checkbox [(checked)]="isChecked3" labelPosition="left">
+  <label vcl-form-control-label label="rightLabel" subLabel="SubRightLabel"></label>
+</vcl-checkbox>
