ADD(radio-group)

--- a/demo/components/radio-group/radio-group.component.html
+++ b/demo/components/radio-group/radio-group.component.html
@@ -1,1 +1,4 @@
-<vcl-radio-group [options]="options"></vcl-radio-group>
+<vcl-radio-group [options]="options" [(ngModel)]="value"></vcl-radio-group>
+
+
+Value: {{value}}
