--- a/src/components/radio-group/radio-group.component.html
+++ b/src/components/radio-group/radio-group.component.html
@@ -1,2 +1,7 @@
-<vcl-radio-button *ngFor="let option of options" checked="isChecked(option)">{{ option.label }}</vcl-radio-button>
+<vcl-radio-button *ngFor="let option of options"
+ [checked]="isChecked(option)"
+ (change)="buttonChanged(option.value, $event)"
+>
+  {{ option.label }}
+</vcl-radio-button>
 <br *ngFor="let option of options" />
