--- a/demo/components/input-control-group/input-control-group.component.html
+++ b/demo/components/input-control-group/input-control-group.component.html
@@ -1,3 +1,3 @@
-<vcl-input-control-group [message]="message.asObservable()">
+<vcl-input-control-group [type]="type" [label]="label">
   <input  vcl-input type="text" />
 </vcl-input-control-group>
