Layer upgrade - Store snapshot of visible layers in layer service - Add closeTop() and closeAll() to layer service - Add keypress and guard example to demo - Make demo routes more flexible

--- a/demo/components/layer/layer.component.html
+++ b/demo/components/layer/layer.component.html
@@ -1,5 +1,7 @@
 <vcl-layer-base></vcl-layer-base>
 
+Press escape to close the top layer<br><br>
+
 <button vcl-button (tap)="layerNonModal.open()" label="open non-modal layer per reference"></button>
 <button vcl-button (tap)="layer1.open()" label="open modal layer"></button>
 <button vcl-button (tap)="openLayerWithData()" label="open layer programmatically"></button>
