--- a/src/components/tab-nav/tab-nav.component.html
+++ b/src/components/tab-nav/tab-nav.component.html
@@ -8,16 +8,16 @@
          [class.vclSelected]="selectedTabIndex===i"
          [class.aria-selected]="selectedTabIndex===i"
          (tap)="selectTab(tab)">
-      <div [wormhole]="tab.label"></div>
+      <div [connectWormhole]="tab.label"></div>
     </div>
   </div>
   <div *ngIf="tabsHaveContent" class="vclTabContent {{tabContentClass}}" [class.vclNoBorder]="!borders">
     <div role="tabpanel" class="vclTabPanel" *ngFor="let tab of tabs; let i = index">
-      <div *ngIf="selectedTabIndex===i && tab.content" [wormhole]="tab.content" [wormhole-indisposable]="true"></div>
+      <div *ngIf="selectedTabIndex===i && tab.content" [connectWormhole]="tab.content" [wormholeIndisposable]="true"></div>
     </div>
   </div>
   <div *ngIf="!tabsHaveContent && content" role="tabpanel" class="vclTabPanel">
-    <div [wormhole]="content" [wormhole-indisposable]="true"></div>
+    <div [connectWormhole]="content" [wormholeIndisposable]="true"></div>
   </div>
 </div>
 
